
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int LOCAL_NET () ;
 int SIZ ;
 int recv (int,char*,int,int ) ;

void my_recv(int s) {
 int len;
 char buf[SIZ];

 LOCAL_NET();
 len=recv(s, buf, SIZ-1, 0);
        buf[len]=0;


}
